# indian-supreme-court-judgments

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  all_fill_changes.json  archive_manager.py  calculate_dataset_sizes.py  calculate_s3_sizes.py  captcha_solver.py  chunk_changes_summary.json  clean-metadata.py  convert_metadata_indexes.py  count_judgments.py  dataset_sizes.csv  dataset_sizes_by_year.csv  dataset_sizes_by_year.md  download-judgments.ipynb  download.py  faulty-response.json  judgment-metadata.py  migrate_to_multipart.py  migrate_zip_to_tar.py  package_tar_files.py  package_zip_files.py  process_metadata.py  pyproject.toml  readme.md  requirements.txt  sc-requests.md  sc_track.json  sync_s3.py  sync_s3_fill.py  tokenizer_base.py  update_s3_from_latest.py  verify_migration.py  verify_sizes.py
.github/: FUNDING.yml
.github/workflows/: download-metadata.yml  fill-s3.yml  update-s3-data.yml
data/metadata/raw/: 01-01-1900-31-12-1949.json  01-01-1950-31-12-1959.json  01-01-1960-31-12-1969.json  01-01-1970-31-12-1979.json  01-01-1980-31-12-1989.json  01-01-1990-31-12-1999.json  01-01-2010-31-12-2010.json  01-01-2011-31-12-2011.json  01-01-2012-31-12-2012.json  01-01-2013-31-12-2013.json  01-01-2014-31-12-2014.json  01-01-2015-31-12-2015.json  01-01-2016-31-12-2016.json  (+19 more)
opendata/docs/: dataset.md
opendata/tutorials/: ATHENA.md  README.md  TUTORIAL.md
prune/: MIGRATION_GUIDE.md  migrate_zip_to_tar.py
scripts/: backfill_individual_s3_objects.py
src/captcha_solver/: main.py
src/utils/: file_utils.py  s3_utils.py
